# workshop-docker

./: app.py  pyproject.toml
